# DreamerX

./: .buildinfo  .gitignore  CHANGELOG.md  CITATION.cff  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js
.github/workflows/: build-docs.yml
_sources/api/: fishyrl.actions.rst.txt  fishyrl.buffers.rst.txt  fishyrl.distributions.rst.txt  fishyrl.dreamer.rst.txt  fishyrl.environments.rst.txt  fishyrl.losses.rst.txt  fishyrl.models.rst.txt  fishyrl.rlgym.rewards.rst.txt  fishyrl.rlgym.rst.txt  fishyrl.rst.txt  fishyrl.utilities.rst.txt  modules.rst.txt
api/: fishyrl.actions.html  fishyrl.buffers.html  fishyrl.distributions.html  fishyrl.dreamer.html  fishyrl.environments.html  fishyrl.html  fishyrl.losses.html  fishyrl.models.html  fishyrl.rlgym.html  fishyrl.rlgym.rewards.html  fishyrl.utilities.html  modules.html
docs/source/: conf.py  index.rst
examples/: CartPole.yaml  Dreamer.ipynb  RLGym.ipynb  RLGym_Preview.ipynb  dreamer_CartPole.ipynb
examples/configs/: Ant.yaml  BipedalWalker.yaml  CartPole.yaml  Dreamer_100m.yaml  Dreamer_12m.yaml  Dreamer_1m.yaml  Dreamer_200m.yaml  Dreamer_25m.yaml  Dreamer_400m.yaml  Dreamer_50m.yaml  Dreamer_Base.yaml  Dreamer_Small.yaml  Hopper.yaml  Humanoid.yaml  LunarLander.yaml  Pusher.yaml  RLGym.yaml  Reacher.yaml  Walker2D.yaml
fishyrl/: __init__.py  actions.py  buffers.py  distributions.py  dreamer.py  environments.py  losses.py  models.py  utilities.py
tests/: test_losses.py  test_models.py
