[project]
name = "fishyrl"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "torch",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pytest",
    "ruff",
    "sphinx",
]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = ["I", "ANN"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test_*.py" = ["ANN201"]

[tool.ruff.lint.pydocstyle]
convention = "google"
